policies/no_latest_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoImageLatest
meta
  name: no-latest-tag
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
