policies/require_limits_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLimits
meta
  name: require-container-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
